<resources>
    <string name="app_name">ArtClass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test User Name</string>
    <string name="nav_header_subtitle">testgmail@gmail.com</string>
    <string name="nav_header_desc">Навигация</string>
    <string name="action_settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="student_name">Student Name</string>
    <string name="_balance_sample">1000 ₴</string>
    <string name="group_sample">взрослые 12ч</string>
    <string name="_hours_sample">16 h</string>
    <string name="how_much_to_add">добавить</string>
    <string name="surname">Фамилия</string>
    <string name="group1">взрослая 11:00</string>
    <string name="group2">дети 15:00</string>
    <string name="group3">странности 17:00</string>
    <string name="student_info">О студенте</string>
    <string name="student_history">История студента</string>
    <string name="regular_surname_sample">Tester Antonio</string>
    <string name="long_surname_sample">WithLongSurnameGuy Antonio</string>
    <string name="title_activity_add_student_to_group">Войти</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="money_char">₴</string>
    <string name="action_sign_in">Войдите или создайте аккаунт</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Некорректное имя пользователя</string>
    <string name="invalid_password">Пароль должен быть более 5 знаков длиной</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_add_to_group">Добавление в группу</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="date_sample">18/09/2019</string>
    <string name="menu_groups">Группы</string>
    <string name="group_redactor">Редактор группы</string>
    <string name="abonement_ended_text">Абонемент завершен</string>
    <string name="add_student_to_group">Добавить студента в группу</string>
    <string name="enter_full_name">введите полное имя</string>
    <string name="_notes_hint">доп. информация</string>
    <string name="add_new_student">Добавить нового студента</string>
    <string name="group_day">День группы</string>
    <string name="group_type_label">Группа</string>
    <string name="title_add_student_dialog">Добавить студента</string>
    <string name="title_add_student_togroup">Добавить в группу</string>
    <string name="_plus500">+500</string>
    <string name="_plus100">+100</string>
    <string name="_plus200">+200</string>
    <string name="make_zero_money_label">обнулить</string>
    <string name="menu_all_students">Все студенты</string>
    <string name="phone_number_sample">+380671112233</string>
    <string name="message_fill_student_name">Заполните поле с именем студента!</string>
    <string name="label_add">Добавить</string>
    <string name="label_cancel">Отмена</string>
    <string name="label_OK">OK</string>
    <string name="phone_number_not_entered">+38(---)</string>
    <string name="date_separator">/</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="message_confirm_delete_placeholder">Подтвердите удаление\n%s</string>
    <string name="title_confirm_delete_student">Удаление</string>
    <string name="group_name_placeholder">день: %s группа: %s</string>
    <string name="title_help">Помощь</string>
    <string name="message_group_delete_help">Чтобы удалить группу удерживайте ее название до появления сообщения об удалении</string>
    <string name="message_student_not_worked">Не работал</string>
    <string name="title_activity_login">Вход</string>
    <string name="students_number_sample">00</string>
    <string name="groupredctor_amount_label">Количество: %d</string>
    <string name="weekday_sample">Воскресенье</string>
    <string name="long_text_sample">adsfasdfasdflasjfjsdf oajdofjosadijfosjdfoijasodfj ajdsfl asjdlfkj alsfj lks jasldfjlkasjdfjqowjfiqwejofj qjoefpjqwjkfkoqwfpkewfp qojefjqiwefjpqwefkqewfmkomo irmqpfmqiemf</string>
    <string name="no_weekday_label">не выбрано</string>
    <string name="no_group_label">нет группы</string>
    <string name="menu_home">Основная</string>
    <string name="action_help">Помощь</string>
    <string name="main_search_hint">Имя студента</string>
    <string name="group_list_label">Все группы</string>
    <string name="attended_lessons_label">Посещенные уроки</string>
    <string name="title_alert_abonement">Абонемент завершен</string>
    <string name="check_absent">Отметить отсутствующих</string>
    <string name="time_sample">11:00</string>
    <string name="no_time_selected">не выбрано</string>
    <string name="time_picker_dialog_tag">TimePickerDialog</string>
    <string name="add_new_student_tag">AddNewStudentDialog</string>
    <string name="add_students_to_group_tag">AddStudentsToGroupDialog</string>
    <string name="fill_all_fields_message">Заполните все поля!</string>
    <string name="fill_name_message">Заполните имя!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_new_group_name">Имя новой группы</string>
    <string name="hint_student_filter">Поиск студентов</string>
    <string name="label_show_log_file">Show log file</string>
    <string name="label_clear_log_file">Clear log file</string>
    <string name="label_database_test">Database test</string>
    <string name="nickname_sample">Common Nickname</string>
    <string name="student_additional_info_hint">Дополнительных записей нет</string>
    <string name="lessons_not_visited_label">Уроков не было посещено</string>
    <string name="help_page_text">
        <li><b>Добавление нового студента</b></li>
        \n
        \tЧтобы добавить нового студента, необходимо перейти на страницу \"Все студенты\" в боковом меню.\n
        Для создания новой записи, нажмите на круглую кнопку со знаком <b><big>+</big></b> по центру и заполните необходимые поля.
        \n
        <li><b>Удаление студента</b></li>
        \n
        Перейдите на страницу \"Все студенты\" и выберите студентов, которых необходимо удалить, при помощи галочки напротив имени студента.
        \n
        Затем нажмите на кнопку с иконкой корзины для удаления и подтвердите удаление.
        \n
        <li><b>Просмотр личной страницы студента</b></li>
        \n
        Для просмотра информации о студенте, на любой странице приложения воспользуйтесь <u>поиском студента по имени</u> в верхней части экрана нажав на знак \"🔍\".
        \n
        Также личная запись студента доступна при нажатии на имя студента на странице \"Все студенты\" и при редактировании группы, в которой состоит этот студент.
        \n
    </string>
</resources>
