<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StudentCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/student_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/student_name"
            android:textAlignment="center"
            android:textSize="@dimen/default_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="80dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/abonement_studcard_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:text="@string/_abonement_sample"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/balance_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:outlineProvider="paddedBounds"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:text="@string/_balance_sample"
                    android:textSize="@dimen/default_text_size" />

                <TextView
                    android:id="@+id/hours_studcard_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    android:text="@string/_hours_sample"
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addCustomCash_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:hint="@string/how_much_to_add"
                android:inputType="numberSigned"
                android:textSize="@dimen/default_text_size" />

            <ImageButton
                android:id="@+id/addMoney_button"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="0dp"
                android:layout_weight="30"
                android:background="@drawable/ic_add_square"
                android:backgroundTint="@color/color_StateOne"
                android:padding="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/add1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/color_StateOne"
                android:text="@string/_plus100"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/add2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/color_StateOne"
                android:text="@string/_plus200"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/add3_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/color_StateOne"
                android:text="@string/_plus500"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/make_zero_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/color_StateOne"
                android:text="@string/deletelabel"
                android:textAllCaps="false"
                android:textSize="@dimen/default_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/phone_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:singleLine="false"
            android:text="@string/phone_number_not_entered"
            android:textSize="@dimen/default_text_size" />

        <LinearLayout
            android:id="@+id/content_for_person_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/student_history"
                android:textSize="@dimen/default_text_size" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>