<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <EditText
        android:id="@+id/dialogadd_fullname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_list_item_height"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_full_name"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:textSize="@dimen/default_text_size"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/fill_name_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_name_message"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/default_text_size"
        android:visibility="gone" />

    <EditText
        android:id="@+id/dialogadd_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:height="@dimen/big_list_item_height"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/_notes_hint"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="10"
        android:minLines="3"
        android:paddingHorizontal="10dp"
        android:singleLine="false"
        android:textSize="@dimen/default_text_size"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/group_type_label"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/default_text_size" />

    <Spinner
        android:id="@+id/dialogadd_spinner_group_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        tools:listitem="@layout/item_spinner_group_type" />

</LinearLayout>