<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <TextView
        android:id="@+id/group_name_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:text="@string/group_sample"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:text="@string/time_sample"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/weekday_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:text="@string/weekday_sample"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>
</LinearLayout>