<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="0dp">

    <LinearLayout
        android:id="@+id/date_wrapper_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/narrow_height"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/date_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="5dp"
            android:text="@string/date_sample"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/weekday_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary_dark"
            android:gravity="center"
            android:text="@string/weekday_sample"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_list_item_height"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:background="@color/color_StateTwo"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/students_count_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/students_number_sample"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</LinearLayout>