<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogcreategroup_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/group_type_label"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/default_text_size" />

        <Spinner
            android:id="@+id/spinner_weekday"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_list_item_height"
            android:layout_marginHorizontal="@dimen/side_offset"
            android:background="@color/colorPrimary"
            tools:listitem="@layout/item_spinner" />

        <TextView
            android:id="@+id/time_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_list_item_height"
            android:layout_marginHorizontal="@dimen/side_offset"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/time_sample"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/default_text_size" />

        <EditText
            android:id="@+id/new_group_name_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_list_item_height"
            android:layout_marginHorizontal="@dimen/side_offset"
            android:layout_marginTop="10dp"
            android:gravity="start|center_vertical"
            android:inputType="textPersonName"
            android:paddingHorizontal="5dp"
            android:singleLine="true"
            android:text="@string/group_sample"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

    <SearchView
        android:id="@+id/dialog_search_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_list_item_height"
        android:layout_margin="5dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialogcreate_select_students_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        tools:listitem="@layout/item_dialog_student_selector">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>