<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/fragment_studentslist"
    tools:context=".StudentsPresentList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateWeekday_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="@dimen/default_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_group1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/color_StateOne"
                android:text="@string/group1"
                android:textSize="@dimen/default_text_size"
                android:visibility="gone" />

            <Button
                android:id="@+id/select_group2_btn"
                style="buttonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/color_StateOne"
                android:text="@string/group2"
                android:textSize="@dimen/default_text_size"
                android:visibility="gone" />

            <Button
                android:id="@+id/select_group3_btn"
                style="buttonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/color_StateOne"
                android:text="@string/group3"
                android:textSize="@dimen/default_text_size"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:minHeight="20dp"
                android:padding="0dp"
                android:paddingLeft="20dp"
                android:paddingTop="0dp"
                android:paddingRight="20dp"
                android:singleLine="true"
                android:text="@string/surname"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/group_present_time_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:minHeight="150dp"
                android:padding="0dp"
                android:singleLine="true"
                android:text="@string/group2"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textDirection="rtl"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/studentsPresentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:longClickable="true"
            tools:listitem="@layout/item_students_presentlist"
            android:focusable="true" />

    </LinearLayout>


</FrameLayout>