<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GroupRedactorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/group_redactor"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_list_item_height"
            android:background="@android:color/background_light"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_redactor_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:lines="1"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/date_sample"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/time_redactor_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/color_StateTwo"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/group1"
                android:textSize="@dimen/default_text_size" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/group_redactor_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/bottom_offset"
            android:background="@android:color/background_light"
            tools:listitem="@layout/item_all_students_list" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_offset"
        android:layout_gravity="bottom|end">

        <TextView
            android:id="@+id/students_count_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/side_offset"
            android:text="@string/groupredctor_amount_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/colorPrimaryDark" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/side_offset"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_delete_black_24dp"
            app:backgroundTint="@color/colorNonAccent"
            app:fabSize="normal" />

    </LinearLayout>
</FrameLayout>